--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ text-align: center;
 font-size:2.5vw;
 margin:0;
 padding:2vh;
+width: 100%;
 }
 
 /* Forms title */
@@ -211,14 +212,14 @@ input, textarea, button, .inputcheck, .inputradio,select{
 
         /*Footer */
         footer{
-            width: 100vw;
+            width: 100% ;
             background-color: #2D3943;
             color:white;
             text-align:center;
             font-size:2.5vw;
             margin:0;
             padding:2vh;
-        } 
+        }   
 @media screen and (min-width: 768px) {
 
     /* head and subhead*/ 
